2009-02-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Reorganized man page based on man man-pages.
	* doc/aria2c.1.txt

2009-02-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed SERVER PERFORMANCE PROFILE and Configuration file section
	because same documents are available in man page.  Added
	References section.
	* README
	
2009-02-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented sc_avg_speed, mc_avg_speed and counter in SERVER
	PERFORMANCE PROFILE section.
	* doc/aria2c.1.txt
	
2009-02-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten the section for configuration file.
	* README
	* doc/aria2c.1.txt
	
2009-02-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the segmentation fault during execution of choking algorithm
	in leecher state because of broken compare operator
	implementation.
	* src/BtLeecherStateChoke.cc
	* src/BtLeecherStateChoke.h

2009-02-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Open file in binary mode.
	* src/CookieStorage.cc
	* src/DHTSetup.cc
	* src/DHTUtil.cc
	* src/Netrc.cc
	* src/NsCookieParser.cc
	* src/ProtocolDetector.cc
	* src/RequestGroupMan.cc
	* src/Signature.cc
	* src/bencode.cc
	* src/download_helper.cc
	* src/option_processing.cc
	* test/CookieParserTest.cc
	* test/DefaultBtProgressInfoFileTest.cc
	* test/FileTest.cc
	* test/GZipDecoderTest.cc
	* test/RequestGroupManTest.cc
	* test/SignatureTest.cc
	* test/SingleFileAllocationIteratorTest.cc
	* test/UriListParserTest.cc

2009-02-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed operator[] because it is ambiguous with built-in []
	operator.
	* src/array_fun.h
	
2009-02-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error
	* src/OptionParser.cc
	
2009-02-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing call to arrayWrapperConst
	* test/array_funTest.cc
