@@ -229,4 +229,4 @@ References
 ----------
  * man aria2c
  * http://aria2.sourceforge.net/
- * https://apps.sourceforge.net/trac/aria2/wiki
+ * http://apps.sourceforge.net/trac/aria2/wiki
