@@ -824,14 +824,14 @@ man aria2c
 </li>
 <li>
 <p>
-<a href="https://apps.sourceforge.net/trac/aria2/wiki">https://apps.sourceforge.net/trac/aria2/wiki</a>
+<a href="http://apps.sourceforge.net/trac/aria2/wiki">http://apps.sourceforge.net/trac/aria2/wiki</a>
 </p>
 </li>
 </ul></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-02-14 18:47:11 JST
+Last updated 2009-02-15 12:21:10 JST
 </div>
 </div>
 </body>
