@@ -1,11 +1,11 @@
 .\"     Title: aria2c
 .\"    Author: 
 .\" Generator: DocBook XSL Stylesheets v1.73.2 <http://docbook.sf.net/>
-.\"      Date: 02/14/2009
+.\"      Date: 02/15/2009
 .\"    Manual: 
 .\"    Source: 
 .\"
-.TH "ARIA2C" "1" "02/14/2009" "" ""
+.TH "ARIA2C" "1" "02/15/2009" "" ""
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -1706,11 +1706,11 @@ aria2c \-\-bt\-min\-crypto\-level=arc4 \-\-bt\-require\-crypto=true file\&.torre
 .RE
 .RE
 .SH "SEE ALSO"
-Project web site: http://aria2\&.sourceforge\&.net/
+Project Web Site: http://aria2\&.sourceforge\&.net/
 .sp
-aria2 wiki: https://apps\&.sourceforge\&.net/trac/aria2/wiki
+aria2 Wiki: http://apps\&.sourceforge\&.net/trac/aria2/wiki
 .sp
-metalink: http://www\&.metalinker\&.org/
+Metalink Homepage: http://www\&.metalinker\&.org/
 .sp
 .SH "COPYRIGHT"
 Copyright \(co 2006, 2009 Tatsuhiro Tsujikawa
