@@ -2211,9 +2211,9 @@ checksums.</td>
 </div>
 <h2 id="_see_also">SEE ALSO</h2>
 <div class="sectionbody">
-<div class="para"><p>Project web site: <a href="http://aria2.sourceforge.net/">http://aria2.sourceforge.net/</a></p></div>
-<div class="para"><p>aria2 wiki: <a href="https://apps.sourceforge.net/trac/aria2/wiki">https://apps.sourceforge.net/trac/aria2/wiki</a></p></div>
-<div class="para"><p>metalink: <a href="http://www.metalinker.org/">http://www.metalinker.org/</a></p></div>
+<div class="para"><p>Project Web Site: <a href="http://aria2.sourceforge.net/">http://aria2.sourceforge.net/</a></p></div>
+<div class="para"><p>aria2 Wiki: <a href="http://apps.sourceforge.net/trac/aria2/wiki">http://apps.sourceforge.net/trac/aria2/wiki</a></p></div>
+<div class="para"><p>Metalink Homepage: <a href="http://www.metalinker.org/">http://www.metalinker.org/</a></p></div>
 </div>
 <h2 id="_copyright">COPYRIGHT</h2>
 <div class="sectionbody">
@@ -2244,7 +2244,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-02-14 19:17:32 JST
+Last updated 2009-02-15 12:20:50 JST
 </div>
 </div>
 </body>
