@@ -1,3 +1,9 @@
+2009-02-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Updated reference/see also section.
+	* README
+	* doc/aria2c.1.txt
+	
 2009-02-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Reorganized man page based on man man-pages.
